# MilyAI

./: Cargo.toml  README.md
MilyAI/: Cargo.toml  README.md
MilyAI/packaging/homebrew/: milyai.rb
MilyAI/src/: agent.rs  main.rs  settings.rs
MilyAI/src/modules/: mod.rs  stt.rs  web.rs
packaging/chocolatey/: milyai.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
src/: agent.rs  main.rs  memory.rs  settings.rs
src/modules/: actions.rs  camera.rs  feeds.rs  llm.rs  mod.rs  stt.rs  tts.rs  voice.rs  voicechat.rs  web.rs
